Fixed form field alignment

--- a/app1/src/features/contact/ContactForm.less
+++ b/app1/src/features/contact/ContactForm.less
@@ -1,7 +1,6 @@
 @import '../../styles/mixins';
 
 .contact-contact-form {
-
-    background-color: @primaryColor;
-
+  background-color: @primaryColor;
+  text-align: left;
 }
